--- a/index.html
+++ b/index.html
@@ -27,35 +27,8 @@
                     <div class="cell">Išlaidos</div>
                     <div class="cell">Balansas</div>
                 </div>
-                <div class="table-content">
-                    <div class="table-row">
-                        <div class="cell">1</div>
-                        <div class="cell">Sausis</div>
-                        <div class="cell">150.00 Eur</div>
-                        <div class="cell">-</div>
-                        <div class="cell">150.00 Eur</div>
-                    </div>
-                    <div class="table-row">
-                        <div class="cell">1</div>
-                        <div class="cell">Sausis</div>
-                        <div class="cell">150.00 Eur</div>
-                        <div class="cell">-</div>
-                        <div class="cell">150.00 Eur</div>
-                    </div>
-                    <div class="table-row">
-                        <div class="cell">1</div>
-                        <div class="cell">Sausis</div>
-                        <div class="cell">150.00 Eur</div>
-                        <div class="cell">-</div>
-                        <div class="cell">150.00 Eur</div>
-                    </div>
-                    <div class="table-row">
-                        <div class="cell">1</div>
-                        <div class="cell">Sausis</div>
-                        <div class="cell">150.00 Eur</div>
-                        <div class="cell">-</div>
-                        <div class="cell">150.00 Eur</div>
-                    </div>
+                <div id="table" class="table-content">
+                    
                 </div>
                 <div class="table-footer">
                     <div class="cell"></div>
@@ -90,5 +63,6 @@
             </div>
         </div>
     </div>
+    <script src="./js/data.js"></script>
 </body>
 </html>
